plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.9.22' apply false
}

allprojects {
    group = 'horizon'
    version = '0.4.0-SNAPSHOT'
}

// Common configuration for all projects
allprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        // Testing
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.assertj:assertj-core:3.24.2'
        testImplementation 'org.mockito:mockito-core:5.5.0'
    }

    test {
        useJUnitPlatform()
        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
    }
}

// Configuration for subprojects only
subprojects {
    dependencies {
        // Logging
        implementation 'org.slf4j:slf4j-api:2.0.9'
        implementation 'ch.qos.logback:logback-classic:1.4.11'
    }
}

// Root project configuration
dependencies {
    // Root project has no dependencies
}

// Add Gradle wrapper task
wrapper {
    gradleVersion = '8.13'
    distributionType = Wrapper.DistributionType.BIN
}
